Project

General

Profile

Actions

Bug #7370

closed

Some benchmarks are slow

Bug #7370: Some benchmarks are slow

Added by authorNari (Narihiro Nakamura) almost 14 years ago. Updated almost 14 years ago.

Status:
Closed
Target version:
ruby -v:
ruby 2.0.0dev (2012-11-12 trunk 37629) [i686-linux]
Backport:
[ruby-core:49410]

Description

Hi.

Some benchmarks are slow since r37631.
I guess DTrace's proves affect CRuby's performance.
Is it possible to fix?

app_answer:
r37629 0.153(sec)
r37631 0.196

app_fib:
r37629 1.497
r37631 2.005

app_tak:
r37629 2.048
r37631 2.984

app_tarai:
r37629 1.713
r37631 2.42

app_raise:
r37629 0.792
r37631 0.85

so_ackermann:
r37629 1.809
r37631 2.529

Please see also this site: http://www.narihiro.info/crubybenci/

Thanks.

Updated by authorNari (Narihiro Nakamura) almost 14 years ago Actions #1 [ruby-core:49412]

  • Assignee changed from ko1 (Koichi Sasada) to tenderlovemaking (Aaron Patterson)

Aaron-san, Could you check it?

Thanks.

Updated by ko1 (Koichi Sasada) almost 14 years ago Actions #2 [ruby-core:49413]

(2012/11/16 16:51), authorNari (Narihiro Nakamura) wrote:

Some benchmarks are slow since r37631.
I guess DTrace's proves affect CRuby's performance.
Is it possible to fix?

He missed to argue about the important thing:

His measurement environment is Linux and DTrace should be inactive!!

--
// SASADA Koichi at atdot dot net

Updated by naruse (Yui NARUSE) almost 14 years ago Actions #3

  • Status changed from Open to Closed
  • % Done changed from 0 to 100

This issue was solved with changeset r37796.
Narihiro, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.


  • vm_insnhelper.h: partly revert r37631 (DTrace support).
    "vm usage information is always collected, so uncomment the
    functions." causes performance impact. [Bug #7370]
    Off course this revert disables related probes.

Updated by naruse (Yui NARUSE) almost 14 years ago Actions #4

  • Status changed from Closed to Assigned

Updated by kosaki (Motohiro KOSAKI) almost 14 years ago Actions #5

  • Status changed from Assigned to Closed

This issue was solved with changeset r37798.
Narihiro, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.


  • Makefile.in: run preprocessor when making probe.h
  • probes.d: define probe insn and insn__operand only when
    VM_COLLECT_USAGE_DETAILS is 1. [Bug #7370]
Actions

Also available in: PDF Atom