* vm_insnhelper.h: partly revert r37631 (DTrace support).   "vm usage information is always collected, so uncomment the   functions." causes performance impact. [Bug #7370]   Off course this revert disables related probes.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@37796 b2dd03c8-39d4-4d8f-98ff-823fe69b080e